Issue #1: Fixed checkboxes to work on Firefox. (Putting a checkbox inside a button makes the checkbox fail on Firefox.)

--- a/app/assets/stylesheets/_search.less
+++ b/app/assets/stylesheets/_search.less
@@ -136,6 +136,15 @@
         }
       }
     }
+
+    .select-checkbox {
+      display: inline-block;
+      margin-left: 10px;
+
+      input {
+        vertical-align: middle;
+      }
+    }
   }
 
   #mobile-results {
